Update header and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </button>
     </div>
 
-    <h1>✨ DIGITAL NOMAD DAILY</h1>
+    <h1>✨ DIGITAL NOMAD DESK</h1>
     <p class="tagline">One page. Zero bullshit. Everything you need today.</p>
 
     <section class="focus-section">
@@ -624,7 +624,7 @@
 
     <footer>
         <p><strong>Updated daily for aspiring and current digital nomads.</strong></p>
-        <p>Built with ❤️ by a nomad, for nomads</p>
+        <p>Built with ❤️</p>
         <p class="affiliate-disclosure">This site contains affiliate links. We may earn a commission if you purchase through our links, at no extra cost to you. We only recommend tools and resources we actually use and believe in.</p>
     </footer>
 
