--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daily curated content for digital nomads and remote workers - No bullshit, just what you need today">
-    <title>Digital Nomad Daily Essentials</title>
+    <title>Digital Nomad Desk - Daily Updates</title>
     <style>
         :root {
             --primary-color: #FF6B6B;
