--- a/index.html
+++ b/index.html
@@ -324,6 +324,44 @@
             margin-bottom: 0.5rem;
         }
 
+        .resource ol {
+            margin-left: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .resource ol li {
+            margin-bottom: 0.5rem;
+        }
+
+        .business-idea .business-meta {
+            background: rgba(78, 205, 196, 0.1);
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+        }
+
+        .business-idea .business-meta p {
+            margin-bottom: 0.5rem;
+        }
+
+        .business-idea .business-meta p:last-child {
+            margin-bottom: 0;
+        }
+
+        .business-idea .description {
+            font-size: 1.05rem;
+            line-height: 1.7;
+            margin-bottom: 1rem;
+        }
+
+        .business-idea ol {
+            background: var(--background);
+            padding: 1.5rem;
+            padding-left: 2.5rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+        }
+
         .cta-button {
             display: inline-block;
             background: var(--primary-color);
@@ -499,14 +537,14 @@
 
     <section class="focus-section">
         <h2>TODAY'S FOCUS</h2>
-        <p>Stop procrastinating on your side hustle. The best time to start was yesterday. The second best time is right fucking now.</p>
+        <p>Stop procrastinating on your side hustle. The best time to start was yesterday. The second best time is right now.</p>
     </section>
 
     <section class="featured-section video-section">
         <h2>🎥 VIDEO</h2>
         <div class="media-container">
             <iframe 
-                src="https://www.youtube.com/embed/23OxV24mvuU" 
+                src="https://www.youtube.com/embed/JBwkrOSRXFU" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -514,7 +552,7 @@
                 loading="lazy">
             </iframe>
         </div>
-        <p><strong>How I Built a 6-Figure Business While Traveling</strong></p>
+        <p><strong>Best Places for Digital Nomads to Live in 2026</strong></p>
     </section>
 
     <section class="featured-section podcast-section">
@@ -528,7 +566,7 @@
                 loading="lazy">
             </iframe>
         </div>
-        <p style="margin-top: 1rem; margin-bottom: 0;"><strong>Digital Nomad Success Stories</strong></p>
+        <p style="margin-top: 1rem; margin-bottom: 0;"><strong>How to Work with Your ADHD</strong></p>
     </section>
 
     <section class="book-section">
@@ -565,7 +603,7 @@
                 <li>Data analysis for business decisions</li>
                 <li>Automation to work less, earn more</li>
             </ul>
-            <a href="#" class="cta-button">Start Learning</a>
+            <a href="https://imp.i384100.net/552bvo" class="cta-button">Start Learning</a>
         </div>
     </section>
 
@@ -573,13 +611,13 @@
         <h2>🔌 GEAR YOU NEED</h2>
         <div class="gadget-container">
             <div class="gadget-image">
-                <img src="/api/placeholder/200/200" alt="Portable second monitor" style="width: 100%; height: auto;">
+                <img src="https://m.media-amazon.com/images/I/81rsMys9S8L._AC_SL1500_.jpg" alt="Portable second monitor" style="width: 100%; height: auto;">
             </div>
             <div class="gadget-details">
                 <h3>Portable Second Monitor</h3>
                 <p>Boost your productivity anywhere with this ultra-slim portable monitor. Perfect for digital nomads who need extra screen real estate without the bulk.</p>
-                <p><strong>Why it's essential:</strong> Weighs just 1.3 pounds, USB-C powered, works with any laptop. No more squinting at a 13-inch screen while debugging code in a café.</p>
-                <a href="#" class="cta-button">Check Price</a>
+                <p><strong>Why it's essential:</strong> Weighs just 1.7 pounds, USB-C powered, works with any laptop. No more squinting at a 13-inch screen while debugging code in a café.</p>
+                <a href="https://amzn.to/45phldt" class="cta-button">Check Price</a>
             </div>
         </div>
     </section>
@@ -589,36 +627,47 @@
         <div class="resource">
             <p><strong>Essential Tool:</strong> NordVPN</p>
             <p><strong>Why it matters:</strong> Because public WiFi in beach cafes isn't exactly Fort Knox. Secure your sensitive work data while hopping between coworking spaces and cafes. Your clients' data is worth more than the $3 monthly subscription.</p>
-            <a href="#" class="cta-button">Get Protected</a>
+            <a href="https://nordvpn.com/special/?utm_term=&utm_content" class="cta-button">Get Protected</a>
         </div>
     </section>
 
-    <section data-section="job">
-        <h2>💼 JOB LISTING</h2>
-        <div class="resource">
-            <h3>Senior Full Stack Developer</h3>
-            <p><strong>Company:</strong> RemoteFirst Inc.</p>
-            <p><strong>Salary:</strong> $120,000 - $160,000</p>
-            <p><strong>Perks:</strong> Fully remote, flexible hours, 4-day workweek</p>
-            <p><strong>Requirements:</strong> 5+ years experience, strong JavaScript skills, ability to work across time zones</p>
-            <a href="#" class="cta-button">Apply</a>
+    <section data-section="business">
+        <h2>💡 BUILD YOUR OWN INCOME</h2>
+        <div class="resource business-idea">
+            <h3>Start a Newsletter in Your Niche</h3>
+            <div class="business-meta">
+                <p><strong>Difficulty:</strong> <span class="difficulty">Beginner-Friendly</span></p>
+                <p><strong>Startup Cost:</strong> <span class="startup-cost">$0-$50/month</span></p>
+                <p><strong>Time to First Dollar:</strong> <span class="time-to-money">2-3 months</span></p>
+                <p><strong>Income Potential:</strong> <span class="potential-income">$500-$5,000/month within 6-12 months</span></p>
+            </div>
+            <p class="description">Newsletters enable you to talk directly to your ideal customer who are already interested in what you have to say and offer.</p>
+            <p><strong>Why it works:</strong> <span class="why-it-works">Key benefits...</span></p>
+            <p><strong>First steps:</strong></p>
+            <ol class="first-steps">
+                <li>Step 1: Define Your Target Audience</li>
+                <li>Step 2: Create High Quality Content</li>
+                <li>Step 3: Build Your Subscriber Base</li>
+                <li>Step 4: Choose Your Newsletter Monetization Strategies</li>
+            </ol>
+            <a href="https://mailchimp.com/resources/how-to-monetize-a-newsletter/" class="cta-button">Learn More</a>
         </div>
     </section>
 
     <section data-section="destination">
         <h2>🌴 GO HERE NEXT</h2>
         <div class="resource">
-            <h3>Chiang Mai, Thailand</h3>
+            <h3>China</h3>
             <p><strong>Monthly Cost:</strong> $1,000-$2,000</p>
-            <p><strong>Internet:</strong> Average 100Mbps (actually works)</p>
+            <p><strong>Internet:</strong> 200-300 Mbps in many big cities!</p>
             <p><strong>Why you'll love it:</strong></p>
             <ul>
-                <li>Thriving community of 5,000+ digital nomads</li>
-                <li>Luxury apartments for less than your Netflix subscription</li>
+                <li>Growing in their digital nomad population!</li>
+                <li>High Internet Speeds in the big cities but less rent than the big cities in US.</li>
                 <li>Street food that'll ruin you for home cooking</li>
-                <li>Coworking spaces with actually comfortable chairs</li>
+                <li>Coworking spaces</li>
             </ul>
-            <a href="#" class="cta-button">Plan Your Trip</a>
+            <a href="https://freakingnomads.com/best-places-for-digital-nomads-in-china/" class="cta-button">Plan Your Trip</a>
         </div>
     </section>
 
