Censor explicit language in header

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
     </section>
 
     <section>
-        <h2>💡 DON'T FUCK THIS UP</h2>
+        <h2>💡 DON'T F*** THIS UP</h2>
         <div class="tip">
             <p>Set up a proper morning routine. Your morning sets the tone for your entire workday. Create a ritual that energizes you - whether it's meditation, exercise, or simply enjoying your coffee in peace. Your WiFi will probably die at 2pm anyway, so get your important work done early.</p>
         </div>
